--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
 asgiref==3.11.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
 Django==5.2.8
+idna==3.11
+pillow==12.0.0
+python-dotenv==1.2.1
+requests==2.32.5
 sqlparse==0.5.3
+stripe==14.0.1
+typing_extensions==4.15.0
 tzdata==2025.2
-stripe
+urllib3==2.5.0
